--- a/code/redo_sim.Rmd
+++ b/code/redo_sim.Rmd
@@ -8,7 +8,13 @@ output:
 
 ---
 
-This is for power over different nondetection rates for balanced and unbalanced sample sizes
+This simulation implements part of:
+
+Gu W, Swihart RK. Absent or undetected? Effects of non-detection of species occurrence on wildlife–habitat models. Biological conservation. 2004 Apr 1;116(2):195-203.
+
+But they are random sampling a wildlife area. They randomly pick occupied areas in the simulation. In other words they have a grid and randomly assign the occupied areas. 
+
+I have retrospective data there. 
 
 ```{r,include=FALSE}
 # install.packages("pacman")
@@ -94,7 +100,7 @@ sim.fun <- function(
          temp.out1 <- as.numeric(rcompanion::cohenW(naive.dat$y, naive.dat$X)) # cohen_w
         out1 <- c(out1, temp.out1)
 
-         temp.out4 <-  temp.out4 <- fisher.test(naive.dat$X,naive.dat$y)$p.value<0.05
+         temp.out4 <- pwr.chisq.test(w = temp.out1, df = 1, N = 200, sig.level = 0.05)$power
          out4 <- c(out4, temp.out4)
 
         #save the odds ratio for the naive model
@@ -125,6 +131,7 @@ Run three at a time-makes all the data for the plot
 ```{r}
 now <- Sys.time()
 
+set.seed(124)
 
 parmlist <- list(
     rep(5001, 3), # interations; num.iter
@@ -327,4 +334,174 @@ ggplot(data = df.plot, aes(x = prp.nondet, zzz, color = aaa)) +
 
 dev.off()
 ```
+
+# Sandbox
+
+```{r,include=FALSE}
+
+
+    n.cases <- 150
+    n.naiv.control <- 50
+    eff.sz <- 0.5
+    prp.nondet <- 0
+
+    ### numbers of things
+    n.dogs <- n.cases + n.naiv.control # total number of dogs
+
+
+    # control group is made up of the unlabeled pos and the real unaffected
+    # number of positive dogs who are unlabled
+    unlab.pos <- round(n.naiv.control * prp.nondet)
+    n.tru.unaff <- n.naiv.control - unlab.pos # the number of unaffected
+
+    n.tru.aff <- n.cases + unlab.pos # the number of positive dogs in both groups
+
+    tru.labels <- c(rep(1, n.tru.aff), rep(0, (n.dogs - n.tru.aff)))
+    naive.labels <- c(rep(1, n.cases), rep(0, n.naiv.control))
+
+table(tru.labels)
+table(naive.labels)
+
+
+        ### sample X
+        # this is where the stocastic part comes in
+
+        x.tru.affected <- rnorm(n.cases, mean = eff.sz)
+
+        x.tru.control <- c(
+            rnorm(unlab.pos, mean = eff.sz),
+            rnorm(n.tru.unaff)
+        )
+
+hist(x.tru.affected)
+hist(x.tru.control)
+
+        naive_X <- c(x.tru.affected, x.tru.control)
+        naive_X_z <- (naive_X - mean(naive_X)) / sd(naive_X)
+
+        # naive.dat <- data.frame(
+        #     X = as.numeric(pnorm(naive_X_z) > runif(200, min = -.01, max = .01)),
+        #     y = naive.labels
+        # )
+
+                naive.dat <- data.frame(
+            X = as.numeric(naive_X_z > runif(200, min = -.01, max = .01)),
+            y = naive.labels
+        )
+hist(naive_X_z)
+
+temp.out1<-cohens_d(naive_X_z ~ naive.dat$y)[[1]]
+#temp.out1<-rcompanion::cohenW(naive.dat$y, naive.dat$X) # cohen_w
+
+temp.out1
+#pwr.chisq.test(w = temp.out1, df = 1, N = 200, sig.level = 0.05)$power
+
+pwr.2p2n.test(temp.out1,n.cases,n.naiv.control,0.05)[[5]]
+```
+
+
+http://www.biostat.umn.edu/~weip/prog.html
+http://www.biostat.umn.edu/~weip/prog/BasuPanGE11/simRareSNP.R
+
+```{r, echo=FALSE}
+########simulate SNPs from a latent multivariate Gaussian variable with
+######## a CS(rho) correlation structure. 
+
+########Input: 
+#               ORs: association in OR between the causal SNPs and outcome;
+#                   implicitly,  # of causal SNPs = length(ORs);
+#               n0: # of controls;
+#               n1: # of cases ;
+#               nSNP: # of noise/marker SNPs to be generated;
+#               rho: the parameter in CS(rho) for the latent multivariate
+#                    Gaussian variable to be discretized to SNPs;
+#                    rho=0 means all SNPs are independent;
+#               MAF0slow, MAF0sup: MAFs for the causal SNPs from 
+#                                   Unif(MAF0slow, MAF0sup);
+#               MAFslow, MAFsup: MAF's of the noise SNPs are drawn from
+#                                 Unif(MAFslow, MAFsup);
+#               p0: background disease prevalence; i.e. true logistic reg model's intercept=log(p0/(1-p0))
+########Output: a list of the binary outcome Y (=0 or 1) and SNPs (=0, 1 or 2);
+#               Y is a vector of length n=n1+n0; X is a matrix of n by nSNP;
+#               and location indices for causal SNPs.
+
+simRareSNP<-function(ORs, n0=500, n1=500, nSNP=0, rho=0,
+                 MAF0slow=0.001, MAF0sup=0.01,
+                 MAFslow=0.001, MAFsup=0.01, p0=0.05){
+
+nSNP0<-length(ORs)
+q<-nSNP+nSNP0
+
+###############index for causal SNPs; mix causal and noise SNPs:
+############### SNP j is causal iff SNP0index[j]=1 or -1; =0 o/w
+signORs<-rep(1, nSNP0)
+signORs[ORs<1]<-0-1
+SNP0indx<-sample(c(signORs,  rep(0, nSNP)), q, replace = FALSE)
+
+R<-matrix(1, nrow=q, ncol=q)
+for(i in 1:q)
+  for(j in 1:q)
+    if (i!=j) R[i, j]<-rho
+svd.R<-svd(R)
+R1<-svd.R$u %*% diag(sqrt(svd.R$d))
+
+##background disease prev = p0
+b0<-log(p0/(1-p0))
+logORs<-log(ORs)
+
+MAF0s<-runif(nSNP0, MAF0slow, MAF0sup)
+MAFs1<-runif(nSNP, MAFslow, MAFsup)
+cutoff0<-qnorm(MAF0s)
+cutoff1<-qnorm(MAFs1)
+
+cutoff<-rep(0, q)
+cutoff[SNP0indx!=0]=cutoff0
+cutoff[SNP0indx==0]=cutoff1
+
+X<-matrix(0, nrow=n0+n1, ncol=q)
+Y<-rep(0, n0+n1); Y[(n0+1):(n0+n1)]<-1
+i<-1
+#sampling controls:
+while ( i <= n0){
+  X0<-rnorm(q, 0, 1) #: X0 ~ MVN(0, I)
+  X1<-R1 %*% X0   #: X1 ~ MVN(0, R)
+  X2<-ifelse(X1<cutoff, 1, 0)
+  X0<-rnorm(q, 0, 1) #: X0 ~ MVN(0, I)
+  X1<-R1 %*% X0   #: X1 ~ MVN(0, R)
+  X3<-ifelse(X1<cutoff, 1, 0)
+  X4<-X2+ X3
+  pr<-1/(1 + exp(-(b0 + sum(logORs * X4[SNP0indx!=0]))))
+  Y1<-sample(c(0, 1), 1, prob=c(1-pr, pr))
+  if (Y1==0){
+    X[i, ]<-X4
+    i<-i+1
+    }
+  }
+#sampling cases:
+while ( i <= n0+n1){
+  X0<-rnorm(q, 0, 1) #: X0 ~ MVN(0, I)
+  X1<-R1 %*% X0   #: X1 ~ MVN(0, R)
+  X2<-ifelse(X1<cutoff, 1, 0)
+  X0<-rnorm(q, 0, 1) #: X0 ~ MVN(0, I)
+  X1<-R1 %*% X0   #: X1 ~ MVN(0, R)
+  X3<-ifelse(X1<cutoff, 1, 0)
+  X4<-X2+ X3
+  pr<-1/(1 + exp(-(b0 + sum(logORs * X4[SNP0indx!=0]))))
+  Y1<-sample(c(0, 1), 1, prob=c(1-pr, pr))
+  if (Y1==1){
+    X[i, ]<-X4
+    i<-i+1
+    }
+  }
+
+list(Y=Y, X=X, SNP0indx=SNP0indx)
+
+}
+```
+
+```{r, echo=FALSE}
+junk<-simRareSNP(5,n0=100,n1=100, p=.2)
+
+str(junk)
+table(junk$Y,junk$X)
 ```
