--- a/documents/sim_paper.rmd
+++ b/documents/sim_paper.rmd
@@ -15,7 +15,7 @@ header-includes:
 ---
 
 
-# Postitive-Unlabeled Data Considerations in the Design of Orthopaedic Risk-factor Studies
+# Sample Size Considerations in the Design of Orthopaedic Risk-factor Studies
 
 ## Abstract
 
@@ -25,11 +25,11 @@ In orthopaedic risk-factor studies, the disease status of control subjects is no
 
 ### Materials and methods
 
-This was a simulation study using study designs from published orthopaedic risk-factor studies. The approach was to use their designs, but simulate the data to include misclassified affected subjects in the control group. The simulated data was used like pilot data to calculate the power of the risk-association test. We calculated powers for several study designs and misclassification rates, and compared them to a reference model, which is the case then there are no misclassifications and the model is correct.
+This was a simulation study using study designs from published orthopaedic risk-factor studies. The approach was to use their designs, but simulate the data to include known proportions of misclassified affected subjects in the control group. The simulated data was used like pilot data to calculate the power of the risk-association test. We calculated powers for several study designs and misclassification rates, and compared them to a reference model, which is the case then there are no misclassifications and the model is correct.
 
 ### Results
 
-Treating unlabeled data as disease-negative only always reduced statistical power compared to the reference power. Power loss was greater with increasing misclassification rate.
+Treating unlabeled data as disease-negative only always reduced statistical power compared to the reference power. Power loss was greater with increasing misclassification rate. Increasing the sample size by a factor of 1.5 was adequate to regain power.
 
 ### Conclusion
 
@@ -61,9 +61,9 @@ Using a simulation, we described how statistical power changes with varying prop
 
 ## Methods and materials
 
-This was a simulation study assessing the changes in power of a univariate association test under different PU conditions. There are many statistical tests for association, but we calculated the power for one of the most common tests, the $\chi^2$ test with one degree of freedom, which is used to test statistical significance of a binary risk factor. For example, if the disease is CCLD, and the risk factor is sex, then the logistic regression coefficient for body condition score would be tested with a $\chi_2$ test. More generally, this test can be used to assess the significance of any risk factor using the predicted values from a univariate logistic regression.
+This was a simulation study assessing the changes in power of a univariate association test under different PU conditions. There are many statistical tests for association, but we calculated the power for one of the most common tests, the Fisher exact test with one degree of freedom, which is used to test statistical significance of a binary risk factor. For example, if the disease is CCLD, and the risk factor is sex, then the logistic regression coefficient for body condition score would be tested with a Fisher exact test. More generally, this test can be used to assess the significance of any risk factor using the predicted values from a univariate logistic regression.
 
-In the context of risk association studies, and all else being equal, the $\chi^2$ test would achieve its maximum power for a balanced study design when the naive model is correct (i.e., the undetected positives rate is zero). We call that maximum power the _reference power_ and reported our results as both percent power loss relative to the reference power and as absolute power loss from reference power. In other words, we are using the $\chi^2$ test to show how much statistical power is lost by ignoring the nondetection rate.
+In the context of risk association studies, and all else being equal, the Fisher exact test would achieve its maximum power for a balanced study design when the naive model is correct (i.e., the undetected positives rate is zero). We call that maximum power the _reference power_ and reported our results as both percent power loss relative to the reference power and as absolute power loss from reference power. In other words, we are using the Fisher exact test to show how much statistical power is lost by ignoring the nondetection rate.
 
 The total sample size for the simulation was fixed N=200, which is consistent with Healey et al. 2019 (N=216), and Baird et al. 2014 (N=217). The effect size, 0.21, was chosen because with N=200, the reference power was close to 80 percent, which is value that is commonly used in study design. That way, the reference model is the one with standard power of 80 percent. Note that the sample size and effect size are not a key parameters for the simulation because for any sample size an effect size can be chosen so that power is 80 percent. Also, effect size and sample size are not features of PU data, per se.
 
@@ -73,12 +73,12 @@ The simulation study varied two study design parameters: the nondetection rate a
 
 ### The simulation algorithm
 
-The overall method is to simulate data, and then use that data like pilot data to estimate power of the $\chi^2$ test. The process is repeated 5000 times for each combination of sample size and nondetection rate, and then the 5000 simulated powers are averaged to give the estimated power for each sample size - nondetection rate combination.
+The overall method is to simulate data, and then use that data like pilot data to estimate power of the Fisher exact test. The process is repeated 5000 times for each combination of sample size and nondetection rate, and then the 5000 simulated powers are averaged to give the estimated power for each sample size - nondetection rate combination.
 Simulating the data works backward from what might be expected. Instead starting with values for a risk factor (e.g., 200 0's and 1's representing sex) and then simulating their disease status, we start with the disease status (e.g., 50 affected cases and 150 controls with 140 unaffected and 15 affected) and then assign binary values for the risk factor. It was done that way to control the nondetection rate and group sizes which needed to be fixed for the power calculation.
 
-The simulation algorithm is most easily described using examples, and we begin with calculating power for the $\chi^2$ test under the reference model, which is 100 cases and 100 correctly labeled (i.e., truly unaffected) controls. That is, there are no affected cases in the control group, so this is not PU data, and the naive model is the correct model. Next we have to associate a binary risk factor variable, $X$ (e.g., sex), with the cases and controls. It is more intuitive to start with the risk factor and then  is simulated by sampling 100 negative cases from a binomial distribution with $Pr(X=1) = 0.2$. That probability means the the baseline risk for the disease in the population is 0.2. It it was chosen arbitrarily, because the baseline risk isn't central to power, the effect size is. As mentioned above, the effect size was 0.21, so the 100 positive cases were sampled from a binomial distribution with $Pr(X=1) = 0.2 + 0.21$.
+The simulation algorithm is most easily described using examples, and we begin with calculating power for the Fisher exact test under the reference model, which is 100 cases and 100 correctly labeled (i.e., truly unaffected) controls. That is, there are no affected cases in the control group, so this is not PU data, and the naive model is the correct model. Next we have to associate a binary risk factor variable, $X$ (e.g., sex), with the cases and controls. It is more intuitive to start with the risk factor and then  is simulated by sampling 100 negative cases from a binomial distribution with $Pr(X=1) = 0.2$. That probability means the the baseline risk for the disease in the population is 0.2. It it was chosen arbitrarily, because the baseline risk isn't central to power, the effect size is. As mentioned above, the effect size was 0.21, so the 100 positive cases were sampled from a binomial distribution with $Pr(X=1) = 0.2 + 0.21$.
 
-Now, the 200 cases are binary pairs of data, one representing the group and the other representing the risk factor. These simulated data are then treated like pilot data and used for a $\chi^2$ test power calculation with one degree of freedom and $\alpha = 0.05$. As mentioned above, this process was repeated 5000 times and the resulting powers average to estimate the reference power.
+Now, the 200 cases are binary pairs of data, one representing the group and the other representing the risk factor. These simulated data are then treated like pilot data and used for a Fisher exact test power calculation with one degree of freedom and $\alpha = 0.05$. As mentioned above, this process was repeated 5000 times and the resulting powers average to estimate the reference power.
 
 For the second example, we calculate the power for a PU example. Suppose that in a 100-patient control group, 10 percent are in fact undetected positives. So the dataset is 100 affected cases in the positive group, 10 affected cases in the control group, and 90 unaffected cases in the control group. As in the previous example, the risk factor is simulated by sampling from binomial distributions. Now, 90 controls are sampled from the binomial distribution with $Pr(X=1) = 0.2$, the 10 affected controls are sampled from the binomial distribution with $Pr(X=1) = 0.2+ 0.21$ and 100 cases are sampled from the binomial distribution with $Pr(X=1) = 0.2 + 0.21$. The 10 mislabeled affected cases remain in the control group, so as to measure the effect of treating PU data naively. As before, the simulated data are treated like pilot data and power was calculated. This process is repeated 5000 times and the result averaged.
 
